Added some basic animations to movement

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>GP Assignment - JMA</title>
+		<title>Canvas Fighter</title>
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="style/ericmeyer-reset.css">
 		<link rel="stylesheet" href="style/main.css">
@@ -29,6 +29,8 @@
 	      <img id="jumping-jimbo" src="images/jumping-jimbo.png"
 	      width="262" height="26">
 	      <img id="jumping-jimbo-img" src="images/jumping-jimbo-char.png"
+	      width="200" height="200">
+	      <img id="jumping-jimbo-rvrs" src="images/jumping-jimbo-char-rvrs.png"
 	      width="200" height="200">
 	      <img id="fistyCuffsMcGeeImg" src="images/fistycuffs-mcgee.png"
 	      width="200" height="200">
