Improved jumping animation

--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,9 @@
 		<link rel="stylesheet" href="style/main.css">
 	</head>
 	<body>
-<!-- 	  <ul id="messages"></ul>
-	  <form action="">
-	    <input id="m" autocomplete="off" /><button>Send</button>
-	  </form> -->
-
+	  <!-- Canvas Fighter - Game Canvas -->
 	  <canvas id="gameCanvas" width="800" height="600">
+	  	<!-- Game Assests -->
 	    <div style="display:none;">
 	      <!-- Welcome Screen Resources -->
 	      <img id="bg-intro" src="images/canvas-fighter.jpg"
@@ -23,16 +20,15 @@
 	      width="280" height="129">
 	      <img id="play-intro" src="images/canvas-fighter-title.png"
 	      width="472" height="251">
+
 	      <!-- Pick Player Screen Resources -->
 	      <img id="select-player" src="images/select-player.png"
 	      width="576" height="40">
 	      <img id="jumping-jimbo" src="images/jumping-jimbo.png"
 	      width="262" height="26">
-	      <img id="jumping-jimbo-img" src="images/jumping-jimbo-char.png"
+	      <img id="jumping-jimbo-img-lrg" src="images/jumping-jimbo-char-lrg.png"
 	      width="200" height="200">
-	      <img id="jumping-jimbo-rvrs" src="images/jumping-jimbo-char-rvrs.png"
-	      width="200" height="200">
-	      <img id="fistyCuffsMcGeeImg" src="images/fistycuffs-mcgee.png"
+	      <img id="fisty-cuffs-img-lrg" src="images/fistycuffs-mcgee-lrg.png"
 	      width="200" height="200">
 	      <img id="fistyCuffsMcGeeTxt" src="images/fistycuffs-mcgeetxt.png"
 	      width="353" height="42">
@@ -40,9 +36,22 @@
 	      width="70" height="48">
 	      <img id="right-arrow" src="images/right-arrow.png"
 	      width="70" height="48">
-	      <!-- Active Game Screen Resources -->
+
+	      <!-- Active Game Resources -->
 	      <img id="bg-game" src="images/bg-game.png"
 	      width="800" height="600">
+
+	      <img id="jumping-jimbo-img" src="images/jumping-jimbo-char.png"
+	      width="200" height="200">
+
+	      <img id="jumping-jimbo-img-rvrs" src="images/jumping-jimbo-char-rvrs.png"
+	      width="200" height="200">
+
+	      <img id="fisty-cuffs-img" src="images/fistycuffs-mcgee.png"
+	      width="200" height="200">
+
+	      <img id="fisty-cuffs-img-rvrs" src="images/fistycuffs-mcgee-rvrs.png"
+	      width="200" height="200">
 	    </div>
 	  </canvas>
 		<script src="http://localhost:3000/socket.io/socket.io.js"></script>
@@ -51,6 +60,8 @@
 		<script src="js/Keys.js"></script>
 		<script src="js/Player.js"></script>
 		<script src="js/main.js"></script>
+		<script src="js/helper.js"></script>
+		<script src="js/IntroAndfighterSelection.js"></script>
 		<script>
 			// Initialise the game
 			init();
