Cleaned up and commented files

--- a/public/index.html
+++ b/public/index.html
@@ -47,10 +47,16 @@
 	      <img id="jumping-jimbo-img-rvrs" src="images/jumping-jimbo-char-rvrs.png"
 	      width="200" height="200">
 
+	      <img id="jumping-jimbo-img-fall" src="images/jumping-jimbo-char-fall.png"
+	      width="200" height="200">
+
 	      <img id="fisty-cuffs-img" src="images/fistycuffs-mcgee.png"
 	      width="200" height="200">
 
 	      <img id="fisty-cuffs-img-rvrs" src="images/fistycuffs-mcgee-rvrs.png"
+	      width="200" height="200">
+
+	      <img id="fisty-cuffs-img-fall" src="images/fistycuffs-mcgee-fall.png"
 	      width="200" height="200">
 	    </div>
 	  </canvas>
